openshift/db2-demo-optional.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db2
spec:
  replicas: 1
  selector:
    matchLabels: { app: db2 }
  template:
    metadata:
      labels: { app: db2 }
    spec:
      containers:
        - name: db2
          image: icr.io/db2_community/db2:11.5.9.0
          ports:
            - containerPort: 50000
          securityContext:
            privileged: true
            runAsUser: 0
            allowPrivilegeEscalation: true
          volumeMounts:
            - name: db2data
              mountPath: /database
      volumes:
        - name: db2data
          persistentVolumeClaim:
            claimName: db2data
---
apiVersion: v1
kind: Service
metadata:
  name: db2
spec:
  selector: { app: db2 }
  ports:
    - name: db2
      port: 50000
      targetPort: 50000
